<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibulgakov.bleclient.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_battery_level"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/battery_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:text="@string/txt_unknown_battery_level"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_charging_state"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/charging_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:text="@string/txt_unknown_charging"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_scan_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_device_scan"
            android:layout_margin="10dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_observ_ecg_start"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Start observing ECG"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/btn_observ_ecg_stop"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Stop observing ECG"
            android:textSize="14sp"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/ecg_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
